# Prolog

./: .gitignore  .gitmodules  CLAUDE.md  Hermes_Geometry_Wakeup.md  Hermes_Origin.md  Hermes_Plan.md  PHASE1_COMPLETION_REPORT.md  PROGRESS_REPORT.md  PROGRESS_REPORT_PHASE5.md  README_UMEDCA_V2.md  REFACTORING_CHECKLIST.md  RMB.pl  api_server.pl  concatenated_code.aux  concatenated_code.out  concatenated_code.tex  concatenated_code.toc  config.pl  counting2.pl  counting_on_back.pl  execution_handler.pl  fsm_synthesis_engine.pl  geometry_bridge.pl  hermeneutic_calculator.pl  incompatibility_semantics.pl  interactive_ui.pl  jason.pl  knowledge_manager.pl  learned_knowledge.pl  learner_1.pl  main.pl  meta_interpreter.pl  more_machine_learner.pl  object_level.pl  oracle_server.pl  readme.md  reflective_monitor.pl  reorganization_engine.pl  reorganization_log.pl  sar_add_chunking.pl  (+25 more)
Modal_Logic/: Phenom_Modal.tex  (+8 more)
lorp/: .gitignore  README.md  TODO.md  config.yaml  pyproject.toml  requirements.txt
lorp/lorp/: __init__.py  config.py
lorp/lorp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lorp/lorp/models/: __init__.py  ollama.py  openai_compat.py  protocol.py
lorp/lorp/pipeline/: __init__.py  gloss.py  validator.py
lorp/lorp/runners/: __init__.py  batch.py  single.py
lorp/lorp/voices/: __init__.py  immanent.py
lorp/lorp/voices/prompts/: example_derrida.pl  example_vp_originary_supplement.pl  example_vp_trace.pl  immanence_rule.md  immanent_system.md  safe_predicates.md
lorp/tests/: test_validator.py
lorp/tests/fixtures/: minimal_passage.txt
(+333 files in other folders)
